--- a/styles.css
+++ b/styles.css
@@ -585,6 +585,130 @@ body {
         position: relative;
         right: unset;
     }
+}.btn-icon {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    color: black;
+    margin: 40px;
+    height: 50px;
+    min-width: 50px;
+    max-width: 50px;
+    border-radius: 40px;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.25);
+    transition: max-width 500ms;
+}
+
+.btn-icon-expanded {
+    max-width: 600px;
+    padding: 0 20px;
+    overflow: hidden;
+}
+
+.icon-big {
+    /* transform: translate(6px); */
+    position: absolute;
+    font-size: 27px;
+    transition: font-size 500ms, translate 500ms ease-in;
+}
+
+.small {
+    transform: translate(0, -7px);
+    font-size: 12px;
+}
+
+.icon-label-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 12px;
+    padding: 0px 25px 0px 0px;
+    margin: 0px 25px 0px 0px;
+    border-right: 1px solid #00000038;
+}
+
+.animation-wrapper {
+    display: none;
+    width: fit-content;
+}
+
+.icon-text {
+    color: #B7B7B7;
+    font-size: 10px;
+    font-weight: 500;
+    text-wrap: nowrap;
+}
+
+.show {
+    display: flex;
+    animation: fade-in 500ms forwards;
+}
+
+.hide {
+    display: none;
+}
+
+.icon-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+.label-wrapper {
+    font-weight: 600;
+}
+
+.btn-expandable-text {
+    font-size: 14px;
+    font-weight: 500;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    text-align: left;
+    -webkit-line-clamp: 2; /* number of lines to show */
+            line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    /* transition: 1s max-width;
+    max-width: 1px; */
+    /* text-wrap: nowrap; */
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    60% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@media (max-width: 500px) {
+    .btn-icon {
+        margin: 20px;
+    }
+
+    .btn-icon-expanded {
+        max-width: 500px;
+        margin: 20px auto;
+        width: calc(100% - 80px);
+    }
+
+    .btn-expandable-text {
+        font-size: 10px;
+        /* text-wrap: wrap; */
+    }
 }.p20 {
     padding: 20px;
 }
